2009-07-01  Mike Gorse  <mgorse@novell.com>

						* Makefile.include: Update to support PACKAGE_FLAG.
	* mkinstalldirs: Added.
	* configure.ac, Makefile.am, data/at-spi-sharp.pc.in.in,
	data/Makefile.am: Added .pc file.