@@ -2,5 +2,8 @@
 EXTRA_DIST =  expansions.m4 mono-uia.snk
 
 #EXTRA_DIST =  at-spi-sharp.dll.config.in
-
+if ENABLE_TESTS
 SUBDIRS = at-spi data tests
+else
+SUBDIRS = at-spi data
+endif
